--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -8,10 +8,10 @@
       >
         <img
           src="../../../assets/images/about-us1.png"
-          class="lg:h-[500px] xl:w-full"
+          class="lg:h-[550px] xl:h-[610px] xl:w-full"
         />
       </div>
-      <div class="space-y-4 xl:space-y-8 items-start !w-full text-start">
+      <div class="space-y-4 xl:space-y-6  items-start !w-full text-start">
         <p class="text-[18px] font-inter  font-semibold text-fcPrimary">
           ABOUT US
         </p>
@@ -37,7 +37,7 @@
         >
           Explore Now
         </button>
-        <div class="">
+        <div class="hidden  md:block">
           <img
             src="../../../assets//images/23.png"
             alt="23"
