--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,11 +1,11 @@
 <section
   class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-8 lg:p-16 xl:p-20"
 >
-  <div>
+  <div class="!order-last lg:order-first">
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex order-first lg:order-first lg:h-[680px] xl:h-[700px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-[680px] xl:h-[700px]"
     />
   </div>
   <div
@@ -23,10 +23,13 @@
       Our core vision is to provide you with services that helps elevates your
       business and products expectations pushing your brand to greater heights
     </p>
-    <div class="space-y-4 md:space-y-4 xl:space-y-8">
+    <div class="space-y-4 sm:space-y-6 xl:space-y-8">
       <div class="flex space-x-8 items-center">
         <div>
-          <img src="../../../assets//images/software.png" />
+          <img
+            src="../../../assets//images/software.png"
+            class="w-[200px] sm:w-full"
+          />
         </div>
         <div class="space-y-2">
           <p
@@ -43,7 +46,10 @@
       </div>
       <div class="flex space-x-8 items-center">
         <div>
-          <img src="../../../assets//images/mobile.png" />
+          <img
+            src="../../../assets//images/mobile.png"
+            class="w-[200px] sm:w-full"
+          />
         </div>
         <div>
           <p
@@ -60,7 +66,10 @@
       </div>
       <div class="flex space-x-8 items-center">
         <div>
-          <img src="../../../assets//images/web.png" />
+          <img
+            src="../../../assets//images/web.png"
+            class="w-[200px] sm:w-full"
+          />
         </div>
         <div>
           <p
