--- a/src/app/pages/our-company/our-company.component.html
+++ b/src/app/pages/our-company/our-company.component.html
@@ -8,10 +8,10 @@
       >
         <img
           src="../../../assets/images/about-us2.png"
-          class="w-full lg:w-[700px] lg:h-[450px]"
+          class="w-full lg:w-[700px] lg:h-[450px] xl:h-[500px]"
         />
       </div>
-      <div class="space-y-4 xl:space-y-8 items-start !w-full text-start">
+      <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
         <p class="text-[18px] font-inter font-semibold text-fcPrimary">
           OUR COMPANY
         </p>
