--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section class="p-8 lg:p-16 xl:p-24 relative">
+<section class="p-6 lg:p-16 xl:p-24 relative">
   <div class="w-full">
     <div
       class="grid lg:grid-cols-2 grid-cols-1 lg:gap-[6%] lg:max-h-screen text-center lg:text-start"
@@ -8,18 +8,17 @@
       >
         <img
           src="../../../assets/images/about-us1.png"
-          class="lg:h-[550px] xl:h-[610px] xl:w-full"
+          class="lg:h-[500px] xl:h-[610px] xl:w-full"
         />
       </div>
-      <div class="space-y-4 xl:space-y-6  items-start !w-full text-start">
-        <p class="text-[18px] font-inter  font-semibold text-fcPrimary">
+      <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
+        <p class="text-[18px] font-inter font-semibold text-fcPrimary">
           ABOUT US
         </p>
         <p
           class="font-cera-pro font-bold text-black text-[28px] xl:text-[38px]"
         >
-          Elevating Businesses, One
-          Solution at a Time
+          Elevating Businesses, One Solution at a Time
         </p>
         <p
           class="font-inter font-normal text-base xl:text-[18px] leading-[35px] xl:leading-[45px]"
@@ -37,11 +36,11 @@
         >
           Explore Now
         </button>
-        <div class="hidden  md:block">
+        <div class="hidden md:block">
           <img
             src="../../../assets//images/23.png"
             alt="23"
-            class="absolute right-0 "
+            class="absolute right-0"
           />
         </div>
       </div>
