--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <app-contact></app-contact>
   <app-footer></app-footer>
 </div> -->
-<div class="block md:hidden">
+<div class="block sm:hidden">
   <app-navbarr></app-navbarr>
 </div>
 <router-outlet></router-outlet>
