--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
-<!-- <div></div>
 <div>
-  <app-home></app-home>
-  <app-about-us></app-about-us>
-  <app-our-company></app-our-company>
-  <app-our-mission></app-our-mission>
-  <app-our-services></app-our-services>
-  <app-contact></app-contact>
+  <div class="block sm:hidden"><app-navbarr></app-navbarr></div>
+
+  <app-home id="home"></app-home>
+  <app-about-us id="about"></app-about-us>
+  <app-our-company id="company"></app-our-company>
+  <app-our-mission id="mission"></app-our-mission>
+  <app-our-services id="service"></app-our-services>
+  <app-contact id="contact"></app-contact>
   <app-footer></app-footer>
-</div> -->
-<div class="block sm:hidden">
-  <app-navbarr></app-navbarr>
 </div>
-<router-outlet></router-outlet>
