--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<section class="p-6 lg:p-16 xl:p-24 relative">
+<section class="p-6 lg:p-16 xl:p-24 relative" id="#about">
   <div class="w-full">
     <div
       class="grid lg:grid-cols-2 grid-cols-1 lg:gap-[6%] lg:max-h-screen text-center lg:text-start"
