--- a/src/app/pages/our-mission/our-mission.component.html
+++ b/src/app/pages/our-mission/our-mission.component.html
@@ -1,5 +1,6 @@
 <section
   class="bg-fcBlack grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 xl:p-20"
+  id="#mission"
 >
   <div class="block lg:hidden">
     <div class="flex overflow-x-auto">
