--- a/src/app/component/navbarr/navbarr.component.html
+++ b/src/app/component/navbarr/navbarr.component.html
@@ -2,15 +2,21 @@
   <div
     class="flex bg-white md:bg-transparent py-4 sm:py-0 px-4 md:px-16 top-0 items-center justify-between"
   >
-    <div class="flex cursor-pointer items-center" href="#home">
-      <div>
-        <img src="../../../assets/images/logo.png" class="w-[45px] sm:w-full" />
+    <a href="#home">
+      <div class="flex cursor-pointer items-center">
+        <div>
+          <img
+            src="../../../assets/images/logo.png"
+            class="w-[45px] sm:w-full"
+          />
+        </div>
+        <span
+          class="text-fcPrimary lg:text-white font-bold pl-2 text-[20px] xl:text-[26px]"
+          >Target Africa</span
+        >
       </div>
-      <span
-        class="text-fcPrimary lg:text-white font-bold pl-2 text-[20px] xl:text-[26px]"
-        >Target Africa</span
-      >
-    </div>
+    </a>
+
     <div class="hidden sm:flex items-center space-x-6 font-semibold font-inter">
       <div>
         <div
