--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="relative h-screen" >
+<section class="relative h-screen">
   <div
     *ngFor="let slide of slides; let i = index"
     [class.opacity-100]="currentIndex === i"
@@ -7,8 +7,6 @@
     class="absolute inset-0 bg-cover bg-no-repeat bg-center transition-opacity duration-500 md:block hidden"
     [style.backgroundImage]="'url(' + slide + ')'"
   >
-    
-
     <div
       class="text-white px-8 md:px-16 xl:px-20 flex h-screen lg:h-screen justify-center items-center my-auto"
     >
@@ -68,16 +66,20 @@
           consectetur.
         </p>
         <div class="flex justify-center gap-6 pt-6">
-          <button
-            class="text-white text-[12px] sm:text-base font-inter font-normal bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
-          >
-            OUR PRODUCT
-          </button>
-          <button
-            class="text-black text-[12px] sm:text-base font-inter font-normal bg-white px-6 py-4 rounded-full hover:text-black"
-          >
-            OUR SERVICES
-          </button>
+          <a href="#service">
+            <button
+              class="text-white text-[12px] sm:text-base font-inter font-normal bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
+            >
+              OUR PRODUCT
+            </button>
+          </a>
+          <a href="#service">
+            <button
+              class="text-black text-[12px] sm:text-base font-inter font-normal bg-white px-6 py-4 rounded-full hover:text-black"
+            >
+              OUR SERVICES
+            </button>
+          </a>
         </div>
       </div>
     </div>
@@ -85,7 +87,7 @@
 
   <!-- Dots for navigation -->
   <div
-    class="absolute  bottom-12 left-1/2 transform -translate-x-1/2 flex space-x-2"
+    class="absolute bottom-12 left-1/2 transform -translate-x-1/2 flex space-x-2"
   >
     <span
       *ngFor="let slide of slides; let i = index"
@@ -96,4 +98,3 @@
     ></span>
   </div>
 </section>
-
