--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -5,7 +5,7 @@
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-[680px] xl:h-[700px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex md:h-[650px] xl:h-[700px]"
     />
   </div>
   <div
