--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,5 +1,5 @@
 <section
-  class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 xl:p-20"
+  class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-20 xl:pb:0 xl:p-20"
 >
   <div class="!order-last lg:order-first">
     <img
