--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,15 +1,15 @@
 <section
-  class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-20 xl:pb:0 xl:p-20"
+  class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-18 xl:pb:0 xl:p-20"
 >
   <div class="!order-last lg:order-first">
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex md:h-[650px] xl:h-[700px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex md:h-[600px] xl:h-[700px]"
     />
   </div>
   <div
-    class="space-y-4 xl:space-y-8 py-10 md:py-0 items-start !w-full text-start"
+    class="space-y-4  xl:space-y-8 py-10 md:py-0 items-start !w-full text-start"
   >
     <p class="text-[18px] font-inter font-semibold text-fcPrimary">
       OUR SERVICES
@@ -23,7 +23,7 @@
       Our core vision is to provide you with services that helps elevates your
       business and products expectations pushing your brand to greater heights
     </p>
-    <div class="space-y-4 sm:space-y-6 xl:space-y-8">
+    <div class="space-y-4 lg:space-y-8 sm:space-y-6 xl:space-y-8">
       <div class="flex space-x-8 items-center">
         <div>
           <img
