--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -5,7 +5,7 @@
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex md:h-[600px] xl:h-[700px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-[600px] xl:h-[700px]"
     />
   </div>
   <div
@@ -23,7 +23,7 @@
       Our core vision is to provide you with services that helps elevates your
       business and products expectations pushing your brand to greater heights
     </p>
-    <div class="space-y-4 lg:space-y-8 sm:space-y-6 xl:space-y-8">
+    <div class="space-y-4 lg:space-y-4 sm:space-y-6 xl:space-y-8">
       <div class="flex space-x-8 items-center">
         <div>
           <img
