--- a/src/app/pages/our-mission/our-mission.component.html
+++ b/src/app/pages/our-mission/our-mission.component.html
@@ -45,7 +45,7 @@
     </div>
     <div *ngIf="activeItem">
       <p
-        class="mt-10 text-white leading-[35px] font-inter font-normal text-[16px] md:text-base xl:text-[18px]"
+        class="mt-4 mb-6 sm:mt-10 text-white leading-[32px] xl:leading-[36px] font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
       >
         {{ activeItem.content }}
       </p>
