--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -17,7 +17,7 @@
         </p>
         <ul class="space-y-1">
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -56,7 +56,7 @@
         </p>
         <ul class="space-y-1">
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -95,7 +95,7 @@
         </p>
         <ul class="space-y-1">
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -105,7 +105,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -115,7 +115,7 @@
             </a>
           </li>
           <li
-            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-base xl:text-[18px]"
+            class="block antialiased font-normal leading-relaxed text-fcGray font-inter font-normal text-[14px] sm:text-base xl:text-[18px]"
           >
             <a
               href="#"
@@ -134,14 +134,14 @@
       class="flex flex-col items-center justify-center w-full py-6 border-t border-fcGray md:flex-row md:justify-between"
     >
       <p
-        class="block antialiased font-normal leading-normal text-center text-fcGray font-inter font-normal text-[16px] xl:text-[22px] md:mb-0"
+        class="block antialiased font-normal leading-normal text-center text-fcGray font-inter font-normal text-base lg:text-[22px] md:mb-0"
       >
         <a href="#">2023 ©</a>
-        <span class="text-fcSecondary px-1">TargetAfrica</span>All rights
+        <span class="text-fcSecondary px-1 text-base lg:text-[22px]">TargetAfrica</span>All rights
         reserved.
       </p>
       <div
-        class="text-fcGray font-inter text-[16px] xl:text-[22px] sm:justify-center"
+        class="text-fcGray font-inter text-base lg:text-[22px] sm:justify-center"
       >
         <p class="font-light">Terms of use &nbsp; | &nbsp; Privacy Policy</p>
         <!-- <a
