--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -4,11 +4,11 @@
       class="grid lg:grid-cols-2 grid-cols-1 lg:gap-[6%] lg:max-h-screen text-center lg:text-start"
     >
       <div
-        class="sm:w-full !w-full items-center pt-4 lg:pt-0 flex justify-center lg:ml-0 flex order-last lg:order-first"
+        class="sm:w-full !w-full items-center pt-4 lg:pt-0 lg:pt-0 flex justify-center lg:ml-0 flex order-last lg:order-first"
       >
         <img
           src="../../../assets/images/about-us1.png"
-          class="lg:h-[500px] xl:h-[610px] xl:w-full"
+          class="lg:h-full xl:h-[550px] xl:w-full"
         />
       </div>
       <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
@@ -21,7 +21,7 @@
           Elevating Businesses, One Solution at a Time
         </p>
         <p
-          class="font-inter font-normal text-base xl:text-[18px] leading-[35px] xl:leading-[45px]"
+          class="font-inter font-normal text-fcBlack3 text-[14px] sm:text-base xl:text-[18px] leading-[32px] lg:leading-[38px]"
         >
           TargetAfrica Integrated Services Limited is a consulting company with
           verse experience in project management, consulting and training
