--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,12 +24,12 @@
         </p>
         <div class="flex justify-center gap-6 pt-6">
           <button
-            class="text-white text-[12px] sm:text-base font-inter font-normal bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
+            class="text-white text-[12px] sm:text-base font-inter font-medium bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
           >
             OUR PRODUCT
           </button>
           <button
-            class="text-black text-[12px] sm:text-base font-inter font-normal bg-white px-6 py-4 rounded-full hover:text-black"
+            class="text-fcBlack2 text-[12px] sm:text-base font-inter !font-medium bg-white px-6 py-4 rounded-full hover:text-black"
           >
             OUR SERVICES
           </button>
