--- a/src/app/pages/our-company/our-company.component.html
+++ b/src/app/pages/our-company/our-company.component.html
@@ -4,11 +4,11 @@
       class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-center lg:text-start"
     >
       <div
-        class="sm:w-full w-full  items-center lg:ml-0 flex pt-4 lg:pt-0 order-last lg:order-last"
+        class="sm:w-full w-full items-center lg:ml-0 flex pt-4 lg:pt-0 order-last lg:order-last"
       >
         <img
           src="../../../assets/images/about-us2.png"
-          class="w-full lg:w-[700px] lg:h-[450px] xl:h-[500px]"
+          class="w-full lg:w-[700px] lg:h-full xl:h-[420px]"
         />
       </div>
       <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
@@ -18,19 +18,18 @@
         <p
           class="font-cera-pro font-bold text-black text-[28px] xl:text-[38px]"
         >
-          Empowering Growth, Inspiring
-          Change
+          Empowering Growth, Inspiring Change
         </p>
         <p
-          class="font-inter font-normal text-base xl:text-[18px] leading-[35px] xl:leading-[45px]"
+          class="font-inter font-normal text-fcBlack3 text-[14px] sm:text-base xl:text-[18px] leading-[32px] lg:leading-[38px]"
         >
-          TargetAfrica Integrated Services Limited is a consulting company with
-          verse experience in project management, consulting and training
-          services. We are available to assist you with planning, design,
-          deployment, and support of wide-ranging cabling and construction
-          services. We are committed to bringing our customers world-class
-          project management in information and communication technology,
-          electrical and constructions.
+          The company incorporated in 2016 is wholly a Nigerian company. Our
+          goal has been to be the best in the best company of choice for our
+          staff and clients in various fields through hard work, dynamism,
+          prudence TargetAfrica Integrated Services Ltd and value-added customer
+          relation services. TargetAfrica Integrated Services Limited give our
+          clients access to professionals with extensive experience in their
+          chosen fields.
         </p>
       </div>
     </div>
