--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,34 +1,34 @@
 <section
   class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-18 xl:pb:0 xl:p-20"
 >
-  <div class="!order-last lg:order-first">
+  <div class="!md:order-last order-first">
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-[630px] xl:h-[700px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-full xl:h-[650px]"
     />
   </div>
   <div
-    class="space-y-4 xl:space-y-8 py-10 md:py-0 items-start !w-full text-start"
+    class="space-y-4 lg:space-y-4 py-10 md:py-0 items-start !w-full text-start"
   >
     <p class="text-[18px] font-inter font-semibold text-fcPrimary">
       OUR SERVICES
     </p>
-    <p class="font-cera-pro font-bold text-black text-[28px] xl:text-[38px]">
+    <p class="font-cera-pro font-bold text-black text-[28px] sm:text-[38px]">
       Your Vision, Our Expertise
     </p>
     <p
-      class="font-inter font-normal text-base xl:text-[18px] leading-[35px] xl:leading-[45px]"
+      class="font-inter font-normal text-[14px] sm:text-base text-fcBlack3 xl:text-[18px] leading-[32px] sm:leading-[34px]"
     >
       Our core vision is to provide you with services that helps elevates your
       business and products expectations pushing your brand to greater heights
     </p>
-    <div class="space-y-4 lg:space-y-4 sm:space-y-6 xl:space-y-8">
+    <div class="space-y-4 lg:space-y-6 sm:space-y-6 xl:space-y-10">
       <div class="flex space-x-8 items-center">
         <div>
           <img
             src="../../../assets//images/software.png"
-            class="w-[200px] sm:w-full"
+            class="w-[200px] xs:w-full lg:w-[200px]"
           />
         </div>
         <div class="space-y-2">
@@ -37,10 +37,11 @@
           >
             Software Development
           </p>
-          <p class="sm:text-base font-inter font-normal leading-[28px]">
+          <p
+            class="text-[12px] sm:text-base font-inter text-fcBlack3 font-normal leading-[23px] xs:leading-[28px]"
+          >
             We are constantly driven by the ever growing need to push technology
-            to serve the people and make it even more user friendly along the
-            line.
+            to serve the people and make it even more user friendly.
           </p>
         </div>
       </div>
@@ -48,19 +49,20 @@
         <div>
           <img
             src="../../../assets//images/mobile.png"
-            class="w-[200px] sm:w-full"
+            class="w-[200px] xs:w-full lg:w-[200px]"
           />
         </div>
-        <div>
+        <div class="space-y-2">
           <p
             class="font-bold text-base sm:text-[22px] font-cera-pro text-fcBlack2"
           >
             Mobile App Development
           </p>
-          <p class="text-base font-inter font-normal leading-[28px]">
+          <p
+            class="text-[12px] sm:text-base text-fcBlack3 font-inter font-normal leading-[23px] xs:leading-[28px]"
+          >
             We are constantly driven by the ever growing need to push technology
-            to serve the people and make it even more user friendly along the
-            line.
+            to serve the people and make it even more user friendly.
           </p>
         </div>
       </div>
@@ -68,19 +70,20 @@
         <div>
           <img
             src="../../../assets//images/web.png"
-            class="w-[200px] sm:w-full"
+            class="w-[200px] xs:w-full lg:w-[200px]"
           />
         </div>
-        <div>
+        <div class="space-y-2">
           <p
             class="font-bold text-base sm:text-[22px] font-cera-pro text-fcBlack2"
           >
             Website Development
           </p>
-          <p class="text-base font-inter font-normal leading-[28px]">
+          <p
+            class="text-[12px] sm:text-base text-fcBlack3 font-inter font-normal leading-[23px] xs:leading-[28px]"
+          >
             We are constantly driven by the ever growing need to push technology
-            to serve the people and make it even more user friendly along the
-            line.
+            to serve the people and make it even more user friendly.
           </p>
         </div>
       </div>
