--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,7 +1,7 @@
 <section
   class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-18 xl:pb:0 xl:p-20"
 >
-  <div class="!md:order-last order-first">
+  <div class="order-last sm:order-first">
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
