--- a/src/app/component/navbarr/navbarr.component.html
+++ b/src/app/component/navbarr/navbarr.component.html
@@ -139,7 +139,7 @@
     [class.hidden]="!isOpen"
   >
     <div
-      class="w-full md:hidden bg-fcBlack flex items-center justify-center mx-auto text-center pt-20 font-inter text-white h-full transform transition-transform ease-in-out duration-300"
+      class="w-full md:hidden bg-fcBlack flex items-center justify-center mx-auto text-center pt-20 font-inter text-white h-screen transform transition-transform ease-in-out duration-300"
       [ngClass]="{ '-translate-x-full': !isOpen }"
     >
       <div class="md:hidden">
