--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -5,13 +5,17 @@
     >
       <div
         class="sm:w-full !w-full items-center pt-4 lg:pt-0 lg:pt-0 flex justify-center lg:ml-0 flex order-last lg:order-first"
+        data-aos="fade-right"
       >
         <img
           src="../../../assets/images/about-us1.png"
           class="lg:h-full xl:h-[550px] xl:w-full"
         />
       </div>
-      <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
+      <div
+        class="space-y-4 xl:space-y-6 items-start !w-full text-start"
+        data-aos="fade-left"
+      >
         <p class="text-[18px] font-inter font-semibold text-fcPrimary">
           ABOUT US
         </p>
@@ -40,7 +44,7 @@
           <img
             src="../../../assets//images/23.png"
             alt="23"
-            class="absolute right-0"
+            class="absolute !right-0"
           />
         </div>
       </div>
