--- a/src/app/pages/our-company/our-company.component.html
+++ b/src/app/pages/our-company/our-company.component.html
@@ -5,13 +5,17 @@
     >
       <div
         class="sm:w-full w-full items-center lg:ml-0 flex pt-4 lg:pt-0 order-last lg:order-last"
+        data-aos="fade-up-right"
       >
         <img
           src="../../../assets/images/about-us2.png"
-          class="w-full lg:w-[700px] lg:h-full xl:h-[420px]"
+          class="w-full lg:w-[700px] xl:w-full lg:h-full xl:h-[420px]"
         />
       </div>
-      <div class="space-y-4 xl:space-y-6 items-start !w-full text-start">
+      <div
+        class="space-y-4 xl:space-y-6 items-start !w-full text-start"
+        data-aos="fade-up-left"
+      >
         <p class="text-[18px] font-inter font-semibold text-fcPrimary">
           OUR COMPANY
         </p>
