--- a/src/app/pages/our-mission/our-mission.component.html
+++ b/src/app/pages/our-mission/our-mission.component.html
@@ -19,11 +19,11 @@
     </div>
   </div>
 
-  <div *ngIf="activeItem">
+  <div *ngIf="activeItem" data-aos="zoom-in-up">
     <img
       [src]="activeItem.image"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex order-first lg:order-last"
+      class="sm:w-full xl:h-[600px] w-full items-center lg:ml-0 flex order-first lg:order-last"
     />
   </div>
   <div>
