--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~aos/dist/aos.css";
+
 
 
 /* Inside your global styles or CSS file */
