--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -5,14 +5,24 @@
   <div
     class="max-w-2xl mx-auto items-center text-center space-y-4 xl:space-y-8 p-6 text-white"
   >
-    <h1 class="text-[30px] sm:text-[38px] xl:text-[45px] font-inter font-bold">
+    <h1
+      class="text-[30px] sm:text-[38px] xl:text-[45px] font-inter font-bold"
+      data-aos="fade-up"
+      data-aos-duration="3000"
+    >
       {{ title }}
     </h1>
-    <p class="text-base xl:text-[22px] font-normal font-inter leading-[34px]">
+    <p
+      class="text-base xl:text-[22px] font-normal font-inter leading-[34px]"
+      data-aos="fade-up"
+      data-aos-duration="3000"
+    >
       {{ content }}
     </p>
     <button
       class="text-white text-[12px] sm:text-[14px] xl:text-base font-inter font-semibold bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
+      data-aos="fade-up"
+      data-aos-duration="3000"
     >
       CONTACT US
     </button>
