--- a/src/app/pages/our-services/our-services.component.html
+++ b/src/app/pages/our-services/our-services.component.html
@@ -1,11 +1,16 @@
 <section
   class="grid lg:grid-cols-2 grid-cols-1 md:gap-[6%] lg:max-h-screen text-start p-6 lg:p-16 lg:pb-18 xl:pb:0 xl:p-20"
 >
-  <div class="order-last sm:order-first">
+  <div
+    class="order-last sm:order-first"
+    data-aos="fade-right"
+    data-aos-offset="300"
+    data-aos-easing="ease-in-sine"
+  >
     <img
       src="../../../assets/images/Group 1000002083.png"
       alt=""
-      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-full xl:h-[650px]"
+      class="sm:w-full w-full items-center lg:ml-0 flex lg:h-full xl:h-[600px]"
     />
   </div>
   <div
@@ -24,11 +29,15 @@
       business and products expectations pushing your brand to greater heights
     </p>
     <div class="space-y-4 lg:space-y-6 sm:space-y-6 xl:space-y-10">
-      <div class="flex space-x-8 items-center">
+      <div
+        class="flex space-x-8 items-center"
+        data-aos="fade-up"
+        data-aos-duration="3000"
+      >
         <div>
           <img
             src="../../../assets//images/software.png"
-            class="w-[200px] xs:w-full lg:w-[200px]"
+            class="w-[200px] xs:w-full lg:w-[200px] xl:w-full"
           />
         </div>
         <div class="space-y-2">
@@ -45,14 +54,18 @@
           </p>
         </div>
       </div>
-      <div class="flex space-x-8 items-center">
+      <div
+        class="flex space-x-8 items-center"
+        data-aos="fade-up"
+        data-aos-duration="3000"
+      >
         <div>
           <img
             src="../../../assets//images/mobile.png"
-            class="w-[200px] xs:w-full lg:w-[200px]"
+            class="w-[200px] xs:w-full lg:w-[200px] xl:w-full"
           />
         </div>
-        <div class="space-y-2">
+        <div class="space-y-2" data-aos="fade-up" data-aos-duration="3000">
           <p
             class="font-bold text-base sm:text-[22px] font-cera-pro text-fcBlack2"
           >
@@ -66,11 +79,15 @@
           </p>
         </div>
       </div>
-      <div class="flex space-x-8 items-center">
+      <div
+        class="flex space-x-8 items-center"
+        data-aos="fade-up"
+        data-aos-duration="3000"
+      >
         <div>
           <img
             src="../../../assets//images/web.png"
-            class="w-[200px] xs:w-full lg:w-[200px]"
+            class="w-[200px] xs:w-full lg:w-[200px] xl:w-full"
           />
         </div>
         <div class="space-y-2">
