--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,16 +13,26 @@
       <div class="space-y-8">
         <p
           class="my-auto flex justify-center text-center font-cera-pro font-bold text-[30px] sm:text-[35px] lg:text-[50px] xl:text-[54px] xl:font-bold"
+          data-aos="fade-up"
+          data-aos-duration="3000"
         >
           Unlocking Your Business Potential
         </p>
-        <p class="text-center text-[12px] sm:text-base font-inter font-normal">
+        <p
+          class="text-center text-[12px] sm:text-base font-inter font-normal"
+          data-aos="fade-up"
+          data-aos-duration="2000"
+        >
           Lorem ipsum dolor sit amet consectetur. Lacus porttitor sed arcu
           integer non duis. Eget et odio<br />
           non cras curabitur in scelerisque. Lorem ipsum dolor sit amet
           consectetur.
         </p>
-        <div class="flex justify-center gap-6 pt-6">
+        <div
+          class="flex justify-center gap-6 pt-6"
+          data-aos="fade-up"
+          data-aos-duration="2500"
+        >
           <button
             class="text-white text-[12px] sm:text-base font-inter font-medium bg-fcPrimary px-6 py-4 rounded-full hover:text-white"
           >
