--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="overflow-x-hidden">
   <div class="block sm:hidden"><app-navbarr></app-navbarr></div>
 
   <app-home id="home"></app-home>
